# parallel-buffer-accessors-create-dependencies

./: README.md
oneapi/: CMakeLists.txt  buffer-accessors-create-dependencies.cpp  output.txt
